--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Infinite Spawn Game</title>
+    <title>Infinite Spawn Game with Arrow Key Controls</title>
     <style>
         body {
             margin: 0;
@@ -25,8 +25,12 @@
         renderer.setSize(window.innerWidth, window.innerHeight);
         document.body.appendChild(renderer.domElement);
 
-        // Set the camera position
+        // Set initial camera position
         camera.position.z = 5;
+
+        // Control variables
+        let turnLeft = false;
+        let turnRight = false;
 
         // Function to create a cube
         function createCube() {
@@ -50,11 +54,42 @@
             // Spawn a new cube on each frame
             createCube();
 
+            // Check for turn controls
+            if (turnLeft) {
+                camera.rotation.y += 0.02;
+            }
+            if (turnRight) {
+                camera.rotation.y -= 0.02;
+            }
+
             // Render the scene
             renderer.render(scene, camera);
         }
 
         animate();
+
+        // Event listeners for arrow key controls
+        document.addEventListener('keydown', (event) => {
+            switch (event.code) {
+                case 'ArrowLeft':
+                    turnLeft = true;
+                    break;
+                case 'ArrowRight':
+                    turnRight = true;
+                    break;
+            }
+        });
+
+        document.addEventListener('keyup', (event) => {
+            switch (event.code) {
+                case 'ArrowLeft':
+                    turnLeft = false;
+                    break;
+                case 'ArrowRight':
+                    turnRight = false;
+                    break;
+            }
+        });
 
         // Handle window resize
         window.addEventListener('resize', () => {
