--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Infinite Spawn Game with Arrow Key Controls</title>
+    <title>Infinite Spawn Game with Arrow Key and WASD Controls</title>
     <style>
         body {
             margin: 0;
@@ -68,13 +68,15 @@
 
         animate();
 
-        // Event listeners for arrow key controls
+        // Event listeners for arrow and A/D key controls
         document.addEventListener('keydown', (event) => {
             switch (event.code) {
                 case 'ArrowLeft':
+                case 'KeyA':
                     turnLeft = true;
                     break;
                 case 'ArrowRight':
+                case 'KeyD':
                     turnRight = true;
                     break;
             }
@@ -83,9 +85,11 @@
         document.addEventListener('keyup', (event) => {
             switch (event.code) {
                 case 'ArrowLeft':
+                case 'KeyA':
                     turnLeft = false;
                     break;
                 case 'ArrowRight':
+                case 'KeyD':
                     turnRight = false;
                     break;
             }
