--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3D Cubes</title>
+    <title>3D Scene with Sliding Menu</title>
     <style>
         body {
             margin: 0;
@@ -26,12 +26,14 @@
         #controlMenu {
             position: absolute;
             top: 60px;
-            right: 20px;
+            right: -250px;  /* Initially hidden to the right */
             background-color: rgba(0, 0, 0, 0.8);
             color: white;
             padding: 20px;
             border-radius: 5px;
-            display: none;
+            width: 250px;
+            height: auto;
+            transition: right 0.3s ease-in-out;  /* Smooth sliding effect */
         }
         #controlMenu label {
             display: block;
@@ -201,10 +203,15 @@
             clearInterval(autoSpawnInterval);
         });
 
-        // Toggle control menu visibility
+        // Toggle control menu visibility with sliding animation
         document.getElementById('menuButton').addEventListener('click', () => {
             const controlMenu = document.getElementById('controlMenu');
-            controlMenu.style.display = controlMenu.style.display === 'none' ? 'block' : 'none';
+            const currentPosition = controlMenu.style.right;
+            if (currentPosition === '0px') {
+                controlMenu.style.right = '-250px';  // Slide out
+            } else {
+                controlMenu.style.right = '0px';    // Slide in
+            }
         });
 
         // Handle window resize
