--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3D Scene with Sliding Menu</title>
+    <title>3D Cubes</title>
     <style>
         body {
             margin: 0;
@@ -105,45 +105,28 @@
         // Array to store the spawned cubes
         let cubes = [];
 
-        // Function to create cubes surrounding the player in 3D space
-        function createCubesSurroundingPlayer(numCubes, radius) {
-            // Clear any existing cubes in the scene
-            cubes.forEach(cube => scene.remove(cube));
-            cubes = [];
-
+        // Function to create cubes at random positions around the player
+        function createCubesAroundPlayer(numCubes, radius) {
             for (let i = 0; i < numCubes; i++) {
                 const geometry = new THREE.BoxGeometry();
                 const material = new THREE.MeshBasicMaterial({ color: Math.random() * 0xffffff });
                 const cube = new THREE.Mesh(geometry, material);
 
-                // Position cubes around the player in a spherical pattern
-                const theta = Math.random() * Math.PI * 2;
-                const phi = Math.random() * Math.PI * 2;
-                cube.position.x = radius * Math.sin(phi) * Math.cos(theta);
-                cube.position.y = radius * Math.sin(phi) * Math.sin(theta);
-                cube.position.z = radius * Math.cos(phi);
+                // Position cubes randomly around the player within a radius
+                const randomX = Math.random() * radius * 2 - radius;
+                const randomY = Math.random() * radius * 2 - radius;
+                const randomZ = Math.random() * radius * 2 - radius;
+
+                cube.position.set(camera.position.x + randomX, camera.position.y + randomY, camera.position.z + randomZ);
 
                 scene.add(cube);
                 cubes.push(cube);
             }
         }
 
-        // Function to update cubes so they follow the player
-        function updateCubes() {
-            cubes.forEach(cube => {
-                // Position cubes relative to the camera's position (slightly trailing behind)
-                cube.position.x += (camera.position.x - cube.position.x) * 0.05;
-                cube.position.y += (camera.position.y - cube.position.y) * 0.05;
-                cube.position.z += (camera.position.z - cube.position.z) * 0.05;
-            });
-        }
-
         // Animation loop
         function animate() {
             requestAnimationFrame(animate);
-
-            // Update cube positions to follow the camera
-            updateCubes();
 
             // Check for turn controls
             if (turnLeft) {
@@ -212,16 +195,16 @@
             }
         });
 
-        // Button to spawn cubes surrounding the player
+        // Button to spawn cubes randomly around the player
         document.getElementById('spawnCubeButton').addEventListener('click', () => {
-            createCubesSurroundingPlayer(10, 10);  // Spawn 10 cubes around the player within a radius of 10 units
+            createCubesAroundPlayer(10, 10);  // Spawn 10 cubes around the player within a radius of 10 units
         });
 
         // Function to start auto-spawning cubes
         function startAutoSpawn() {
             const cubesPerSecond = document.getElementById('cubeRate').value;
             if (autoSpawnInterval) clearInterval(autoSpawnInterval);  // Clear any existing interval
-            autoSpawnInterval = setInterval(() => createCubesSurroundingPlayer(10, 10), 1000 / cubesPerSecond);  // Auto-spawn cubes
+            autoSpawnInterval = setInterval(() => createCubesAroundPlayer(10, 10), 1000 / cubesPerSecond);  // Auto-spawn cubes
         }
 
         // Start and stop auto-spawn buttons
